# rust-streaming-pipeline

./: README.md  docker-compose.yml
rust-streaming/: Cargo.toml
rust-streaming/src/: main.rs
